# serene-dev

./: .gitignore  README.md  pyproject.toml
serene/: metrics.py
serene/model/: attention.py  feed_forward_network.py  sasrec.py
serene/preprocessing/: __init__.py  filters.py  reports.py
source/data/: __init__.py  collator.py  dataset.py  sampler.py
source/model/: __init__.py  sasrec.py
source/preprocessing/: splitters.py
