[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "serene"
version = "0.0.42"
requires-python = ">=3.10"
dependencies = [
    "clearml",
    "hydra-core",
    "lightning",
    "matplotlib",
    "numpy",
    "polars",
    "python-dotenv",
    "seaborn",
    "tensorboard",
    "torch",
]

[tool.ruff]
line-length = 120
